tests/ui/constructors-fail.stderr
error[E0308]: mismatched types
  --> $DIR/constructors-fail.rs:68:27
   |
68 |     fs.create_dir("/tmp", &mut other_storage).unwrap();
   |                           ^^^^^^^^^^^^^^^^^^ expected struct `RamStorage`, found struct `OtherRamStorage`
   |
   = note: expected type `&mut RamStorage`
              found type `&mut OtherRamStorage`
